Bug 171777 - Plasma workspace crashed at start-up and caused the signal 11
Summary: Plasma workspace crashed at start-up and caused the signal 11
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 170329 170992 171155 171214 171978 173551 174408 176226 176250 176588 177034 177189 178573 178849 179550 179700 180572 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-09-28 08:18 UTC by Gorden Killen
Modified: 2009-02-21 13:54 UTC (History)
16 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gorden Killen 2008-09-28 08:18:33 UTC
Version:            (using KDE 4.1.1)
OS:                Linux
Installed from:    Fedora RPMs

KDE Desktop Environment worked fine until I installed the workspace version 4.0.2-20.fc9 and core files 6:4.0.3-9.fc9.  Now after a bit of delay at start-up , I get a blank blue screen with  a message that a fatal error occurred and that the plasma workspace crashed and caused the signal 11.

I tried installing the next updates for the workspace (4.1.1-1.fc9) and for the core (6:4.1.1.fc9.  Still have the same problem.

Backtraces are included.

Application: Plasma Workspace (plasma), signal SIGSEGV
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread 0xb7f95770 (LWP 3804)]
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[KCrash handler]
#6  0x01b3373d in ?? () from /usr/lib/libQtGui.so.4
#7  0x01b355ba in QGraphicsLinearLayout::insertItem ()
   from /usr/lib/libQtGui.so.4
#8  0x0434a7a3 in ?? () from /usr/lib/kde4/plasma_applet_devicenotifier.so
#9  0x0434a917 in ?? () from /usr/lib/kde4/plasma_applet_devicenotifier.so
#10 0x001b80e5 in Plasma::Applet::flushPendingConstraintsEvents ()
   from /usr/lib/libplasma.so.2
#11 0x001b8726 in Plasma::Applet::timerEvent () from /usr/lib/libplasma.so.2
#12 0x0139aeaf in QObject::event () from /usr/lib/libQtCore.so.4
#13 0x01b384a7 in QGraphicsWidget::event () from /usr/lib/libQtGui.so.4
#14 0x0157a2ac in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#15 0x0158210e in QApplication::notify () from /usr/lib/libQtGui.so.4
#16 0x093823dd in KApplication::notify () from /usr/lib/libkdeui.so.5
#17 0x0138b731 in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#18 0x013b9741 in ?? () from /usr/lib/libQtCore.so.4
#19 0x013b5f50 in ?? () from /usr/lib/libQtCore.so.4
#20 0x035b7008 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#21 0x035ba6b3 in ?? () from /lib/libglib-2.0.so.0
#22 0x035ba871 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#23 0x013b5ea8 in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#24 0x01612d35 in ?? () from /usr/lib/libQtGui.so.4
#25 0x01389e1a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#26 0x01389fda in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#27 0x004012eb in KIO::NetAccess::enter_loop () from /usr/lib/libkio.so.5
#28 0x004014ec in KIO::NetAccess::statInternal () from /usr/lib/libkio.so.5
#29 0x0040216b in KIO::NetAccess::stat () from /usr/lib/libkio.so.5
#30 0x004021eb in KIO::NetAccess::mostLocalUrl () from /usr/lib/libkio.so.5
#31 0x02f02efe in ?? () from /usr/lib/kde4/plasma_applet_icon.so
#32 0x02f036ef in ?? () from /usr/lib/kde4/plasma_applet_icon.so
#33 0x001e0747 in Plasma::Corona::loadLayout () from /usr/lib/libplasma.so.2
#34 0x001e0af1 in Plasma::Corona::initializeLayout ()
   from /usr/lib/libplasma.so.2
#35 0x0012e679 in ?? () from /usr/lib/libkdeinit4_plasma.so
#36 0x001309af in ?? () from /usr/lib/libkdeinit4_plasma.so
#37 0x00130ad1 in ?? () from /usr/lib/libkdeinit4_plasma.so
#38 0x0012481a in kdemain () from /usr/lib/libkdeinit4_plasma.so
#39 0x080487d2 in _start ()
Comment 1 Oliver Putz 2008-10-22 20:00:44 UTC
*** Bug 171978 has been marked as a duplicate of this bug. ***
Comment 2 Aaron J. Seigo 2008-11-11 01:05:22 UTC
SVN commit 882599 by aseigo:

don't bother with loading previous items in the constraints event; do it as soon as we have the engines. safer against crashes too.

BUG:171777


 M  +3 -7      devicenotifier.cpp  
 M  +0 -4      devicenotifier.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=882599
Comment 3 Aaron J. Seigo 2008-11-11 01:27:02 UTC
SVN commit 882604 by aseigo:

proper, and simpler, KRun usage
BUG:171777


 M  +3 -1      icon.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=882604
Comment 4 Jonathan Thomas 2008-11-11 01:35:27 UTC
*** Bug 173551 has been marked as a duplicate of this bug. ***
Comment 5 Jonathan Thomas 2008-11-11 01:41:52 UTC
*** Bug 171155 has been marked as a duplicate of this bug. ***
Comment 6 Jonathan Thomas 2008-11-11 02:14:12 UTC
Bug 174151, bug 170856, bug 174569, bug 170329, bug 170992, and bug 174408 can be marked as duplicates of this bug.

Maybe bug 170441 too
Comment 7 Aaron J. Seigo 2008-11-20 02:15:22 UTC
*** Bug 171214 has been marked as a duplicate of this bug. ***
Comment 8 Aaron J. Seigo 2008-11-20 02:17:34 UTC
*** Bug 170992 has been marked as a duplicate of this bug. ***
Comment 9 Aaron J. Seigo 2008-11-20 02:48:01 UTC
*** Bug 174408 has been marked as a duplicate of this bug. ***
Comment 10 Jonathan Thomas 2008-11-27 19:36:47 UTC
*** Bug 176226 has been marked as a duplicate of this bug. ***
Comment 11 Jonathan Thomas 2008-11-27 19:37:40 UTC
*** Bug 170329 has been marked as a duplicate of this bug. ***
Comment 12 Aaron J. Seigo 2008-11-28 18:53:32 UTC
*** Bug 176250 has been marked as a duplicate of this bug. ***
Comment 13 Jonathan Thomas 2008-12-07 17:06:53 UTC
*** Bug 176588 has been marked as a duplicate of this bug. ***
Comment 14 Dario Andres 2008-12-08 01:17:32 UTC
*** Bug 177189 has been marked as a duplicate of this bug. ***
Comment 15 Dario Andres 2008-12-23 16:00:12 UTC
*** Bug 178573 has been marked as a duplicate of this bug. ***
Comment 16 Dario Andres 2008-12-27 01:55:33 UTC
*** Bug 178849 has been marked as a duplicate of this bug. ***
Comment 17 Dario Andres 2009-01-05 22:19:39 UTC
*** Bug 179700 has been marked as a duplicate of this bug. ***
Comment 18 Jonathan Thomas 2009-01-06 22:16:01 UTC
*** Bug 179550 has been marked as a duplicate of this bug. ***
Comment 19 Jonathan Thomas 2009-01-14 00:39:27 UTC
*** Bug 180572 has been marked as a duplicate of this bug. ***
Comment 20 Dario Andres 2009-02-21 13:54:12 UTC
*** Bug 177034 has been marked as a duplicate of this bug. ***