don't bother with loading previous items in the constraints event; do it as soon as we have the engines. safer against crashes too.

BUG:171777

svn path=/trunk/KDE/kdebase/workspace/; revision=882599